UI: Switch font to Times New Roman

--- a/index.html
+++ b/index.html
@@ -5,17 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kayıp Yavru Köpek: Şeker Diyarı</title>
-    <link rel="stylesheet" href="style.css?v=2.3">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css?v=2.4">
     <style>
         body {
             margin: 0;
             overflow: hidden;
             background-color: #ffe6f2;
             /* Default pink */
-            font-family: 'Roboto', sans-serif;
+            font-family: 'Times New Roman', Times, serif;
         }
 
         canvas {
